--- a/tower-cache/pom.xml
+++ b/tower-cache/pom.xml
@@ -14,6 +14,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+	
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-annotation</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-concurrent</artifactId>
