--- a/tower-test-maven-plugin/pom.xml
+++ b/tower-test-maven-plugin/pom.xml
@@ -19,6 +19,10 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-annotation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
 			<artifactId>tower-util</artifactId>
 		</dependency>
 		<!-- Maven core -->
