--- a/tower-util/pom.xml
+++ b/tower-util/pom.xml
@@ -10,7 +10,11 @@
 	<name>tower-util</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-
+		<dependency>
+			<groupId>com.tower.soafw</groupId>
+			<artifactId>tower-annotation</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
