调整日志框架

--- a/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
+++ b/tower-config-maven-plugin/src/main/resources/META-INF/config/template/template.properties
@@ -53,9 +53,10 @@ domain.1=.xml;pom.xml.domain;#{artifactId}/#{artifactId}-domain
 
 #####################################
 
-service=1;2
+service=1;2;3
 service.1=.xml;pom.xml.svc;#{artifactId}/#{artifactId}-service
 service.2=.java;IHelloService.java;#{artifactId}/#{artifactId}-service/src/main/java/com/#{company}/service/#{artifactId}
+service.3=.md;README.md.service;#{artifactId}/#{artifactId}-service
 
 #####################################
 
@@ -75,7 +76,7 @@ mq.3=.xml;spring-mq.xml;#{artifactId}/#{artifactId}-mq/src/main/resources/META-I
 
 service-impl=1;2;3;4;5;6;7;8;9;10;11;12;13;14
 service-impl.1=.xml;pom.xml.svc.impl;#{artifactId}/#{artifactId}-service-impl
-service-impl.2=.md;README.md.service;#{artifactId}/#{artifactId}-service-impl
+service-impl.2=.md;README.md.service-impl;#{artifactId}/#{artifactId}-service-impl
 service-impl.3=.xml;logback.xml.service;#{artifactId}/#{artifactId}-service-impl/src/main/resources
 service-impl.4=.xml;service.xml;#{artifactId}/#{artifactId}-service-impl/src/main/resources/META-INF/config/local
 service-impl.5=.properties;dubbo.properties;#{artifactId}/#{artifactId}-service-impl/src/main/resources/META-INF/config/local
