--- a/tower-config/src/main/resources/META-INF/tower.properties
+++ b/tower-config/src/main/resources/META-INF/tower.properties
@@ -18,5 +18,5 @@ config.store.type.zookeeper.addresses=127.0.0.1:2181
 
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://db.corp.tower.com:3306/soafw_db
-db.user=utest
-db.pwd=ptest
+db.user=zhugongping
+db.pwd=huoLigu1858.1
